--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,49 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #FFC2E6;
+  --text-color: #353430;
+  --accent-color-backgroung: #FF8DCB;
+  --main-header-color: #FFC2E6;
+  --accent-color: #ff0070;
+  --background-image: url(../images/cover-image-light.png);
+  --header-color: #353430;
+  --header-color-sub: #353430;
+
+  .header__decorated-text {
+    display: none;
+}
+
+.header__theme-menu-button:active {
+    border: 1px solid var(--text-color);
+}
+
+.header__theme-menu-button:hover {
+    border: 1px solid rgb(53, 52, 48, 0.4);
+}
+
+.header__theme-menu-button:focus {
+    outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+    border-bottom: 1px solid #353430;
+}
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --background-color: #FFC2E6;
+        --text-color: #353430;
+        --accent-color-backgroung: #FF8DCB;
+        --main-header-color: #FFC2E6;
+        --accent-color: #ff0070;
+        --background-image: url(../images/cover-image-light.png);
+        --header-color: #353430;
+        --header-color-sub: #353430;
+    }
+
+    .header__decorated-text {
+        display: none;
+    }
 }
