--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,377 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-image: var(--background-image);
+  background-position: center;
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-color: var(--background-color);
+  background-attachment: fixed;
+  inline-size: 100%;
+  padding-inline-end: 20px;
+  box-sizing: border-box;
+  
+}
+
+.header {
+    display: grid;
+    block-size: 100vh;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: auto;
+    position: relative;
+}
+
+.header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 20px 20px;
+    gap: 10px;
+}
+
+.header__theme-menu-button {
+    background-color: transparent;
+    inline-size: 70px;
+    block-size: 26px;
+    border: none;
+    color: var(--header-color-sub);
+    font-size: 18px;
+    font-family: 'IBM Plex mono';
+    font-weight: 400;
+    text-transform: lowercase;
+
+}
+
+.header__theme-menu-button_active {
+    pointer-events: none;
+}
+
+.header__theme-menu-button:active {
+    border: 1px solid var(--text-color);
+}
+
+.header__theme-menu-button:hover {
+    border: 1px solid rgb(53, 52, 48, 0.4);
+}
+
+.header__theme-menu-button:focus {
+    outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+    border-bottom: 1px solid #353430;
+}
+
+.header__header-main {
+    color: var(--main-header-color);
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    font-family: 'IBM Plex mono';
+    font-weight: 700;
+    text-shadow: 4px 4px 0 var(--accent-color);
+    line-height: 82.5%;
+    align-self:center;
+}
+
+.header__header-description {
+    inline-size: 491px;
+    justify-self: end;
+    align-self: center;
+}
+
+.title-decor {
+    font-family: 'IBM Plex mono';
+    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);;
+    color: var(--header-color);
+    inline-size: 100%;
+    font-weight: 700;
+    line-height: 23.4px;
+    background-color: var(--accent-color-backgroung);
+    
+}
+
+.header__decorated-text {
+    display: inline-block;
+    color: var(--accent-color);
+    font-family: 'IBM Plex mono';
+    font-size: 18px;
+    text-transform: uppercase;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+  .header__decorated-text::after {
+    content:'';
+    display: inline-block;
+    block-size: 10px;
+    inline-size: 10px;
+    border-radius: 50%;
+    margin-inline-start: 10px;
+    box-shadow: 0px 0px 4px 5px rgba(255, 0, 112, 0.5);
+    background-color: var(--accent-color);
+  }
+
+.decorated-zone::after {
+    content: '';
+    position: absolute;
+    display: block;
+    inline-size: 25px;
+    block-size: 25px;
+    border-bottom: 1px solid var(--header-color-sub);
+    border-left: 1px solid var(--header-color-sub);
+    bottom: 20px;
+    left: 20px;
+}
+
+.decorated-zone::before {
+    content: '';
+    position: absolute;
+    display: block;
+    inline-size: 25px;
+    block-size: 25px;
+    border-top: 1px solid var(--header-color-sub);
+    border-right: 1px solid var(--header-color-sub);
+    top: 20px;
+    right: 0;
+}
+
+.concentration {
+    inline-size: 100%;
+    padding-inline-start: 20px;
+}
+
+.reason {
+    inline-size: 100%;
+    display: grid;
+    grid-template-columns: 315px 1fr;
+    gap: 20px;
+    margin-block-start: 60px;
+}
+
+.subtitle_header {
+    font-family: 'IBM Plex mono';
+    font-size: 18px;
+    color: var(--header-color-sub);
+    font-weight: 700;
+    line-height: 23.4px;
+}
+
+.reason__descr {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    inline-size: 100%;
+    gap: 15px;
+}
+
+.description {
+    font-family: 'IBM Plex mono';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23.4px;
+    color: var(--text-color);
+}
+
+.description_link {
+    text-shadow: 2px 2px 0 var(--accent-color-backgroung);
+    text-decoration: none;
+}
+
+.factors {
+    margin-block-start: 80px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+}
+
+.factors__reason {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.factors__reason-description {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.variants {
+    margin-block-start: 81px;
+    display: grid;
+    grid-template-columns: 315px 1fr;
+    gap: 20px;
+}
+
+.variants__description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+}
+
+.title-decor_light {
+    font-weight: 400;
+}
+
+.variants-in-picture {
+    inline-size: 100%;
+    margin-block-start: 80px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.variants-in-picture__images {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, minmax(230px, 315px));
+    grid-template-rows: repeat(2, minmax(192px, 260px)) minmax(318px, 428px);
+}
+
+.variants-in-picture__images > picture:nth-child(1) {
+    grid-column: 1 / 3;
+}
+
+.variants-in-picture__images > picture:nth-child(2) {
+    
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+}
+ 
+.variants-in-picture__images > picture:nth-child(3) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+}
+
+.variants-in-picture__images > picture:nth-child(5) {
+    grid-column: 2 / 4;
+}
+
+.variants-in-picture__images img {
+    display: block;
+    inline-size: 100%;
+    block-size: 100%;
+    object-fit: cover;
+}
+
+.footer {
+    display: grid;
+    block-size: 768px;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    position: relative;
+    text-align: center;
+    margin-block-start: 60px;
+}
+
+@media (max-width: 768px) {
+
+    .header__theme-menu {
+        justify-self: end;
+        align-self: center;
+    }
+
+    .header__theme-menu-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+    }
+
+    .header__header-description {
+        inline-size: 364px;
+    }
+
+    .reason {
+        inline-size: 100%;
+        display: grid;
+        grid-template-columns: 236px 1fr;
+        gap: 20px;
+        margin-block-start: 60px;
+    }
+
+    .factors__reason {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 17px;
+    }
+
+    .factors .subtitle_header {
+        inline-size: 236px;
+    }
+
+    .variants {
+        margin-block-start: 81px;
+        display: grid;
+        grid-template-columns: 236px 1fr;
+        gap: 20px;
+    }
+}
+
+@media (376px <= width <= 759px) {
+    .reason {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-block-start: 40px;
+    }
+
+    .variants {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+        margin-block-start: 50px;
+    }
+
+    .variants-in-picture__images {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+}
+
+@media (max-width: 375px) {
+    .header__header-description {
+        padding-inline-start: 20px;
+    }
+
+    .reason {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-block-start: 40px;
+    }
+
+    .factors {
+        margin-block-start: 50px;
+    }
+
+    .factors .subtitle_header {
+        inline-size: 355px;
+    }
+
+    .variants {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+        margin-block-start: 50px;
+    }
+
+    .variants-in-picture {
+        margin-block-start: 50px;
+    }
+
+    .variants-in-picture__images {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
 }
