--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
 .header {
     display: grid;
     block-size: 100vh;
+    min-block-size: 768px;
     grid-template-rows: 1fr auto 1fr;
     grid-template-columns: auto;
     position: relative;
@@ -260,7 +261,8 @@
 
 .footer {
     display: grid;
-    block-size: 768px;
+    block-size: 100vh;
+    min-block-size: 768px;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
     position: relative;
@@ -269,6 +271,11 @@
 }
 
 @media (max-width: 768px) {
+
+    .header {
+        block-size:100vh;
+        min-block-size: 1024px;
+    }
 
     .header__theme-menu {
         justify-self: end;
@@ -311,6 +318,11 @@
         grid-template-columns: 236px 1fr;
         gap: 20px;
     }
+
+    .footer {
+        block-size:100vh;
+        min-block-size: 1024px;
+    }
 }
 
 @media (376px <= width <= 759px) {
@@ -338,6 +350,12 @@
 }
 
 @media (max-width: 375px) {
+    
+    .header {
+        block-size:100vh;
+        min-block-size: 1024px;
+    }
+   
     .header__header-description {
         padding-inline-start: 20px;
     }
@@ -374,5 +392,10 @@
         flex-direction: column;
         align-items: center;
         gap: 20px;
+    }
+
+    .footer {
+        block-size:100vh;
+        min-block-size: 1024px;
     }
 }
