версия проекта после первой итерации ревью

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,4 +11,5 @@
     --background-image: url(../images/cover-image-light.png);
     --header-color: #353430;
     --header-color-sub: #353430;
+    --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
 }
