--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   background-image: var(--background-image);
@@ -27,18 +26,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 20px 20px;
+    padding-block-start: 20px;
+    padding-inline-start: 20px;
     gap: 10px;
 }
 
 .header__theme-menu-button {
     background-color: transparent;
     inline-size: 70px;
-    block-size: 26px;
+    min-block-size: 26px;
     border: none;
     color: var(--header-color-sub);
     font-size: 18px;
-    font-family: 'IBM Plex mono';
+    font-family: 'IBM Plex mono', sans-serif;
     font-weight: 400;
     text-transform: lowercase;
     cursor: pointer;
@@ -47,6 +47,7 @@
 
 .header__theme-menu-button_active {
     pointer-events: none;
+    border: 1px solid var(--text-color);
 }
 
 .header__theme-menu-button:active {
@@ -63,17 +64,17 @@
 }
 
 .header__theme-menu-button:focus-visible {
-    border-bottom: 1px solid #353430;
+    border-bottom: 1px solid currentColor;
 }
 
 .header__header-main {
     color: var(--main-header-color);
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    font-family: 'IBM Plex mono';
+    font-size: var(--logo-size);
+    font-family: 'IBM Plex mono', sans-serif;
     font-weight: 700;
     text-shadow: 4px 4px 0 var(--accent-color);
     line-height: 82.5%;
-    align-self:center;
+    align-self: center;
 }
 
 .header__header-description {
@@ -82,9 +83,31 @@
     align-self: center;
 }
 
-.title-decor {
+.header__decorated-text {
+    display: inline-block;
+    color: var(--accent-color);
     font-family: 'IBM Plex mono';
-    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);;
+    font-size: 18px;
+    text-transform: uppercase;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+  .header__decorated-text::after {
+    content:'';
+    display: inline-block;
+    block-size: 10px;
+    inline-size: 10px;
+    border-radius: 50%;
+    margin-inline-start: 10px;
+    box-shadow: 0px 0px 4px 5px rgba(255, 0, 112, 0.5);
+    background-color: var(--accent-color);
+  }
+
+.title-decor {
+    font-family: 'IBM Plex mono', sans-serif;
+    font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
     color: var(--header-color);
     inline-size: 100%;
     font-weight: 700;
@@ -96,7 +119,7 @@
 .header__decorated-text {
     display: inline-block;
     color: var(--accent-color);
-    font-family: 'IBM Plex mono';
+    font-family: 'IBM Plex mono', sans-serif;
     font-size: 18px;
     text-transform: uppercase;
     position: absolute;
@@ -123,7 +146,7 @@
     block-size: 25px;
     border-bottom: 1px solid var(--header-color-sub);
     border-left: 1px solid var(--header-color-sub);
-    bottom: 20px;
+    inset-block-end: 20px;
     left: 20px;
 }
 
@@ -153,7 +176,7 @@
 }
 
 .subtitle_header {
-    font-family: 'IBM Plex mono';
+    font-family: 'IBM Plex mono', sans-serif;
     font-size: 18px;
     color: var(--header-color-sub);
     font-weight: 700;
@@ -166,14 +189,20 @@
     justify-content: flex-start;
     align-items: flex-start;
     inline-size: 100%;
-    gap: 15px;
+    gap: 20px;
+}
+
+.subtitle_description {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .description {
-    font-family: 'IBM Plex mono';
+    font-family: 'IBM Plex mono', sans-serif;
     font-size: 18px;
     font-weight: 400;
-    line-height: 1.5em;
+    line-height: 1.3em;
     color: var(--text-color);
 }
 
@@ -182,11 +211,24 @@
     text-decoration: none;
 }
 
+.description_link:hover {
+    border-bottom: solid 1px var(--text-color);
+}
+
+.desciption_link:focus {
+    outline: none;
+}
+
+.description_link:focus-visible {
+    outline: solid 1px var(--text-color);
+}
+
 .factors {
     margin-block-start: 80px;
+    padding-block-end: 20px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
     align-items: flex-start;
 }
 
@@ -199,21 +241,7 @@
 .factors__reason-description {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-}
-
-.variants {
-    margin-block-start: 81px;
-    display: grid;
-    grid-template-columns: 315px 1fr;
-    gap: 20px;
-}
-
-.variants__description {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 15px;
+    gap: 10px;
 }
 
 .title-decor_light {
@@ -231,8 +259,9 @@
 .variants-in-picture__images {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(3, minmax(230px, 315px));
-    grid-template-rows: repeat(2, minmax(192px, 260px)) minmax(318px, 428px);
+    inline-size: 100%;
+    grid-template-columns: repeat(1fr, auto-fit);
+    grid-template-rows: repeat(2, minmax(182px, 260px)) minmax(308px, 428px);
 }
 
 .variants-in-picture__images > picture:nth-child(1) {
@@ -272,10 +301,23 @@
     margin-block-start: 60px;
 }
 
-@media (max-width: 768px) {
+.footer__footer-main {
+    color: var(--main-header-color);
+    font-size: var(--logo-size);
+    font-family: 'IBM Plex mono', sans-serif;
+    font-weight: 700;
+    text-shadow: 4px 4px 0 var(--accent-color);
+    line-height: 82.5%;
+    align-self:center;
+}
+
+@media (width <= 768px) {
+
+    :root {
+        --logo-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    }
 
     .header {
-        block-size:100vh;
         min-block-size: 1024px;
     }
 
@@ -314,27 +356,20 @@
         inline-size: 236px;
     }
 
-    .variants {
-        margin-block-start: 81px;
-        display: grid;
-        grid-template-columns: 236px 1fr;
-        gap: 20px;
-    }
-
     .footer {
-        block-size:100vh;
         min-block-size: 1024px;
     }
 }
 
-@media (376px <= width <= 759px) {
+@media (width <=520px) {
+
     .reason {
         display: flex;
         flex-direction: column;
         gap: 20px;
         margin-block-start: 40px;
     }
-
+    
     .variants {
         display: flex;
         flex-direction: column;
@@ -342,7 +377,7 @@
         gap: 15px;
         margin-block-start: 50px;
     }
-
+    
     .variants-in-picture__images {
         display: flex;
         flex-direction: column;
@@ -351,11 +386,10 @@
     }
 }
 
-@media (max-width: 375px) {
+@media (width <= 356px) {
 
     .header {
-        block-size:100vh;
-        min-block-size: 1024px;
+        min-block-size: 668px;
     }
    
     .header__header-description {
@@ -377,14 +411,6 @@
         inline-size: 355px;
     }
 
-    .variants {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 15px;
-        margin-block-start: 50px;
-    }
-
     .variants-in-picture {
         margin-block-start: 50px;
     }
@@ -397,7 +423,6 @@
     }
 
     .footer {
-        block-size:100vh;
-        min-block-size: 1024px;
+        min-block-size: 668px;
     }
 }
