--- a/styles/variables.css
+++ b/styles/variables.css
@@ -12,4 +12,5 @@
     --header-color: #353430;
     --header-color-sub: #353430;
     --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --hover: rgb(53, 52, 48, 0.4);
 }
