--- a/styles/dark.css
+++ b/styles/dark.css
@@ -17,6 +17,7 @@
   --accent-color: #FF0070;
   --header-color: #000028;
   --header-color-sub: #FF0070;
+  --hover: rgb(255, 0, 112, 0.4);
 
   .header__decorated-text {
     display: inline-block;
@@ -34,6 +35,7 @@
         --accent-color: #FF0070;
         --header-color: #000028;
         --header-color-sub: #FF0070;
+        --hover: rgb(255, 0, 112, 0.4);
     }
 
     .header__decorated-text {
