--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@
 }
 
 .header__theme-menu-button:hover {
-    border: 1px solid var(--header-color-sub);
+    border: 1px solid var(--hover);
     
 }
 
@@ -81,7 +81,7 @@
     inline-size: 491px;
     justify-self: end;
     align-self: center;
-    block-size: 90px;
+    min-block-size: 90px;
 }
 
 .header__decorated-text {
@@ -101,7 +101,7 @@
     block-size: 10px;
     inline-size: 10px;
     border-radius: 50%;
-    margin-inline-start: 10px;
+    margin-inline-end: 10px;
     box-shadow: 0px 0px 4px 5px rgba(255, 0, 112, 0.5);
     background-color: var(--accent-color);
   }
@@ -124,8 +124,8 @@
     font-size: 18px;
     text-transform: uppercase;
     position: absolute;
-    top: 22px;
-    right: 15px;
+    top: 20px;
+    right: 0px;
 }
 
   .header__decorated-text::after {
@@ -134,7 +134,6 @@
     block-size: 10px;
     inline-size: 10px;
     border-radius: 50%;
-    margin-inline-start: 10px;
     box-shadow: 0px 0px 4px 5px rgba(255, 0, 112, 0.5);
     background-color: var(--accent-color);
   }
@@ -263,7 +262,7 @@
     display: grid;
     inline-size: 100%;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(315px, 1fr));
+    grid-template-columns: repeat(auto-fill, 1fr);
     grid-template-rows: minmax(182px, 260px) minmax(242px, 320px) minmax(318px, 428px);
 }
 
@@ -339,15 +338,11 @@
 
     .header__header-description {
         inline-size: 364px;
-        block-size: 130px;
+        min-block-size: 130px;
     }
 
     .reason {
-        inline-size: 100%;
-        display: grid;
         grid-template-columns: 236px 1fr;
-        gap: 20px;
-        margin-block-start: 60px;
     }
 
     .factors__reason {
@@ -365,7 +360,7 @@
         display: grid;
         inline-size: 100%;
         grid-gap: 20px;
-        grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+        /*grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));*/
         grid-template-rows: minmax(102px, 190px) minmax(210px, 230px) minmax(258px, 318px);
     }
 
@@ -424,6 +419,10 @@
    
     .header__header-description {
         padding-inline-start: 10px;
+    }
+
+    .header__decorated-text {
+        top: 10px;
     }
 
     .decorated-zone::after {
